--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ﻿<!doctype html>
 <html>
   <head>  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Job Listings</title>
     <script src="env.js"></script>
     <script src="index.js"></script>
   </head>
